<resources>
    <string name="app_name">Absen Manual</string>
    <string name="submit">Submit</string>
    <string name="hint_time">Waktu</string>
    <string name="hint_date">Tanggal</string>
    <string name="hint_message">Keterangan</string>
    <string-array name="labels_array">
        <item>Hadir tepat waktu</item>
        <item>Terlambat</item>
        <item>Ijin</item>
        <item>Sakit</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>